--- a/src/SaritasaGen.FeatureGenerator/SaritasaGen.FeatureGenerator.csproj
+++ b/src/SaritasaGen.FeatureGenerator/SaritasaGen.FeatureGenerator.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <MinimumVisualStudioVersion>16.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+    <TargetFrameworkProfile />
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -15,7 +23,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SaritasaGen.FeatureGenerator</RootNamespace>
     <AssemblyName>SaritasaGen.FeatureGenerator</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -45,8 +53,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Commands\AddFeatureCommand.cs" />
+    <Compile Include="DependencyInjection\AutofacAsyncPackage.cs" />
+    <Compile Include="DependencyInjection\ServicesAutofacModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaritasaGen.FeatureGeneratorPackage.cs" />
+    <Compile Include="FeatureGeneratorPackage.cs" />
+    <Compile Include="Services\DialogService.cs" />
+    <Compile Include="Views\AddFeatureControl.xaml.cs">
+      <DependentUpon>AddFeatureControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddFeatureWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -54,11 +70,64 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
+    <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.7.3065" />
+    <PackageReference Include="Autofac">
+      <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="CalcBinding">
+      <Version>2.5.2</Version>
+    </PackageReference>
+    <PackageReference Include="EnvDTE">
+      <Version>8.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="FontAwesome.WPF">
+      <Version>4.7.0.9</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.202" ExcludeAssets="runtime">
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.3.2099">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="WindowsBase">
+      <Version>4.6.1055</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FeatureGeneratorPackage.vsct" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Views\AddFeatureControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SaritasaGen.Infrastructure.Abstractions\SaritasaGen.Infrastructure.Abstractions.csproj">
+      <Project>{fe9738fc-3457-48cf-86a2-4f4c4647c25c}</Project>
+      <Name>SaritasaGen.Infrastructure.Abstractions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SaritasaGen.Infrastructure.Mvvm\SaritasaGen.Infrastructure.Mvvm.csproj">
+      <Project>{55BD0365-4FDB-44A3-9604-296F7F594249}</Project>
+      <Name>SaritasaGen.Infrastructure.Mvvm</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SaritasaGen.Infrastructure\SaritasaGen.Infrastructure.csproj">
+      <Project>{5824a51d-7132-44cf-9208-0ac3a8f7eac9}</Project>
+      <Name>SaritasaGen.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
