--- a/src/SaritasaGen.Domain/SaritasaGen.Domain.csproj
+++ b/src/SaritasaGen.Domain/SaritasaGen.Domain.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ClassModel.cs" />
     <Compile Include="HandlerData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
